--- a/db/data.yml
+++ b/db/data.yml
@@ -13,6 +13,251 @@ ar_internal_metadata:
     - '2021-08-11 00:01:52.555186'
 
 ---
+services:
+  columns:
+  - id
+  - name
+  - created_at
+  - updated_at
+  records: 
+  - - 1
+    - marketing
+    - '2021-08-23 17:23:01.893628'
+    - '2021-09-04 02:03:07.076233'
+  - - 2
+    - air conditioning
+    - '2021-08-23 17:23:16.864192'
+    - '2021-09-04 02:03:28.554436'
+  - - 3
+    - alarm system
+    - '2021-08-23 17:25:09.110487'
+    - '2021-08-23 17:25:09.110487'
+  - - 4
+    - appraisals
+    - '2021-08-23 17:25:18.381809'
+    - '2021-08-23 17:25:18.381809'
+  - - 5
+    - attorneys
+    - '2021-08-23 17:25:40.407144'
+    - '2021-09-04 02:03:55.572368'
+  - - 7
+    - auction
+    - '2021-08-23 17:26:07.555502'
+    - '2021-09-04 02:04:47.214079'
+  - - 8
+    - binsr
+    - '2021-08-23 17:26:20.458496'
+    - '2021-09-04 02:05:42.318674'
+  - - 9
+    - cabinets
+    - '2021-08-23 17:26:42.668243'
+    - '2021-08-23 17:26:42.668243'
+  - - 10
+    - carpenter
+    - '2021-08-23 17:26:51.290807'
+    - '2021-08-23 17:26:51.290807'
+  - - 12
+    - cleaners
+    - '2021-08-23 17:27:11.920891'
+    - '2021-08-23 17:27:11.920891'
+  - - 13
+    - closing gift
+    - '2021-08-23 17:27:19.709484'
+    - '2021-08-23 17:27:19.709484'
+  - - 14
+    - computer technician
+    - '2021-08-23 17:27:29.265107'
+    - '2021-08-23 17:27:29.265107'
+  - - 15
+    - surfacing
+    - '2021-08-23 17:27:40.343649'
+    - '2021-09-04 02:07:52.969064'
+  - - 16
+    - counter tops
+    - '2021-08-23 17:28:49.927350'
+    - '2021-08-23 17:28:49.927350'
+  - - 17
+    - accounting
+    - '2021-08-23 17:29:08.739739'
+    - '2021-09-04 02:08:12.809715'
+  - - 18
+    - drywall
+    - '2021-08-23 17:29:20.329384'
+    - '2021-09-04 02:08:41.001383'
+  - - 19
+    - structural engineer
+    - '2021-08-23 17:29:28.958635'
+    - '2021-09-04 02:09:08.257420'
+  - - 20
+    - electrician
+    - '2021-08-24 04:26:18.806565'
+    - '2021-08-24 04:26:18.806565'
+  - - 21
+    - contractor
+    - '2021-08-24 04:26:24.797214'
+    - '2021-09-04 02:09:56.426965'
+  - - 22
+    - fences
+    - '2021-08-24 04:26:34.891696'
+    - '2021-09-04 02:10:16.818766'
+  - - 23
+    - flooring
+    - '2021-08-24 04:26:45.749026'
+    - '2021-08-24 04:26:45.749026'
+  - - 24
+    - garage repair
+    - '2021-08-24 04:26:51.089537'
+    - '2021-08-24 04:26:51.089537'
+  - - 25
+    - graphic design
+    - '2021-08-24 04:27:01.304425'
+    - '2021-08-24 04:27:01.304425'
+  - - 26
+    - gutters
+    - '2021-08-24 04:27:09.271344'
+    - '2021-08-24 04:27:09.271344'
+  - - 27
+    - hard money lenders
+    - '2021-08-24 04:27:16.927166'
+    - '2021-08-24 04:27:16.927166'
+  - - 28
+    - handyman
+    - '2021-08-24 04:27:24.743730'
+    - '2021-08-24 04:27:24.743730'
+  - - 29
+    - health insurance
+    - '2021-08-24 04:27:31.101888'
+    - '2021-08-24 04:27:31.101888'
+  - - 30
+    - home warranty
+    - '2021-08-24 04:27:38.446812'
+    - '2021-08-24 04:27:38.446812'
+  - - 31
+    - hvac
+    - '2021-08-24 04:29:02.014156'
+    - '2021-08-24 04:29:02.014156'
+  - - 32
+    - interior design
+    - '2021-08-24 04:29:07.952540'
+    - '2021-08-24 04:29:07.952540'
+  - - 33
+    - inspections
+    - '2021-08-24 04:29:16.716151'
+    - '2021-08-24 04:29:16.716151'
+  - - 34
+    - insurance
+    - '2021-08-24 04:29:23.946320'
+    - '2021-08-24 04:29:23.946320'
+  - - 35
+    - landscape
+    - '2021-08-24 04:29:29.625069'
+    - '2021-08-24 04:29:29.625069'
+  - - 37
+    - locksmith
+    - '2021-08-24 04:29:44.220283'
+    - '2021-08-24 04:29:44.220283'
+  - - 38
+    - mold
+    - '2021-08-24 04:29:50.568138'
+    - '2021-08-24 04:29:50.568138'
+  - - 39
+    - movers
+    - '2021-08-24 04:29:56.221548'
+    - '2021-08-24 04:29:56.221548'
+  - - 40
+    - mortgage lender
+    - '2021-08-24 04:30:01.499128'
+    - '2021-09-04 02:14:46.439146'
+  - - 41
+    - short sale
+    - '2021-08-24 04:30:10.548775'
+    - '2021-09-04 02:19:07.881463'
+  - - 42
+    - odor elimination
+    - '2021-08-24 04:30:16.515413'
+    - '2021-08-24 04:30:16.515413'
+  - - 43
+    - real estate agent
+    - '2021-08-24 04:30:23.077203'
+    - '2021-09-04 02:19:30.826813'
+  - - 44
+    - painters
+    - '2021-08-24 04:30:30.198924'
+    - '2021-08-24 04:30:30.198924'
+  - - 45
+    - pest control
+    - '2021-08-24 04:30:34.843811'
+    - '2021-08-24 04:30:34.843811'
+  - - 47
+    - photographer
+    - '2021-08-24 04:30:53.264938'
+    - '2021-09-04 02:17:10.996786'
+  - - 48
+    - plumbing
+    - '2021-08-24 04:31:00.747169'
+    - '2021-08-24 04:31:00.747169'
+  - - 51
+    - yard design
+    - '2021-08-24 04:31:20.143226'
+    - '2021-09-04 02:16:13.154455'
+  - - 52
+    - property management
+    - '2021-08-24 04:31:28.549672'
+    - '2021-08-24 04:31:28.549672'
+  - - 53
+    - printing
+    - '2021-08-24 04:31:37.908778'
+    - '2021-08-24 04:31:37.908778'
+  - - 54
+    - roofer
+    - '2021-08-24 04:31:42.747339'
+    - '2021-08-24 04:31:42.747339'
+  - - 55
+    - security camera installation
+    - '2021-08-24 04:31:49.151932'
+    - '2021-08-24 04:31:49.151932'
+  - - 56
+    - sign company
+    - '2021-08-24 04:31:56.199368'
+    - '2021-08-24 04:31:56.199368'
+  - - 57
+    - commercial agent
+    - '2021-08-24 04:32:02.725225'
+    - '2021-09-04 02:23:57.701479'
+  - - 58
+    - stagers
+    - '2021-08-24 04:32:11.153453'
+    - '2021-08-24 04:32:11.153453'
+  - - 59
+    - stucco
+    - '2021-08-24 04:32:17.351238'
+    - '2021-08-24 04:32:17.351238'
+  - - 60
+    - tile services
+    - '2021-08-24 04:32:25.556211'
+    - '2021-09-04 02:24:37.949268'
+  - - 62
+    - videographer
+    - '2021-08-24 04:33:50.906437'
+    - '2021-08-24 04:33:50.906437'
+  - - 63
+    - window repair
+    - '2021-08-24 04:33:58.378636'
+    - '2021-08-24 04:33:58.378636'
+  - - 64
+    - window washer
+    - '2021-08-24 04:34:06.826459'
+    - '2021-08-24 04:34:06.826459'
+  - - 65
+    - pool services
+    - '2021-09-04 02:12:48.752892'
+    - '2021-09-04 02:16:40.043556'
+  - - 66
+    - pool
+    - '2022-01-17 16:10:26.306742'
+    - '2022-01-17 16:10:26.306742'
+
+---
 states:
   columns:
   - id
@@ -276,3 +521,24 @@ states:
     - WY
     - '2021-08-11 00:30:43.795744'
     - '2021-08-11 00:30:43.795744'
+
+---
+users:
+  columns:
+  - id
+  - email
+  - encrypted_password
+  - reset_password_token
+  - reset_password_sent_at
+  - remember_created_at
+  - created_at
+  - updated_at
+  records: 
+  - - 1
+    - spedrozausc@gmail.com
+    - "$2a$12$rVL55c77glweDPPLOUrgpOweLC4eqVYC5A1U2437Grwr9GXrKr8Re"
+    -
+    -
+    -
+    - '2021-08-28 19:43:19.565161'
+    - '2021-08-30 23:47:49.703079'
